[package]
name = "guff"
version = "0.0.7"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2021"
rust-version = "1.56"
description = "An SCSS parser and CSS minifier rolled into one."
repository = "https://github.com/Blobfolio/guff"
readme = "README.md"
publish = false

[package.metadata.deb]
maintainer = "Josh Stoik <hello@blobfolio.com>"
copyright = "2022, Blobfolio, LLC <hello@blobfolio.com>"
license-file = ["./LICENSE", "0"]
extended-description = ""
revision = "1"
depends = "$auto"
section = "utils"
assets = [
    ["./target/x86_64-unknown-linux-gnu/release/guff", "usr/bin/", "755"],
    ["./release/completions/guff.bash", "etc/bash_completion.d/", "644"],
    ["./release/man/guff.1.gz", "usr/share/man/man1/", "644"],
]

[package.metadata.bashman]
name = "Guff"
bash-dir = "./release/completions"
man-dir = "./release/man"
credits-dir = "./"

[[package.metadata.bashman.switches]]
short = "-h"
long = "--help"
description = "Print help information and exit."

[[package.metadata.bashman.switches]]
short = "-V"
long = "--version"
description = "Print version information and exit."

[[package.metadata.bashman.options]]
short = "-i"
long = "--input"
label = "<FILE>"
description = "The path to an SCSS or CSS source file."
path = true

[[package.metadata.bashman.options]]
short = "-o"
long = "--output"
label = "<FILE>"
description = "The path to save the minified output to. If omitted, the result will be printed to STDOUT instead."
path = true

[[package.metadata.bashman.options]]
long = "--last"
label = "<NUM>"
description = "Set compatibility to the last X versions of each browser, except IE."
path = false

[[package.metadata.bashman.options]]
long = "--age"
label = "<YEARS>"
description = "Set compatibility to versions released within the past X years, except IE."
path = false

[[package.metadata.bashman.options]]
long = "--android"
label = "<VER>"
description = "Minimum supported version of the Android browser."
path = false

[[package.metadata.bashman.options]]
long = "--chrome"
label = "<VER>"
description = "Minimum supported version of Google Chrome."
path = false

[[package.metadata.bashman.options]]
long = "--edge"
label = "<VER>"
description = "Minimum supported version of Microsoft Edge."
path = false

[[package.metadata.bashman.options]]
long = "--firefox"
label = "<VER>"
description = "Minimum supported version of Firefox."
path = false

[[package.metadata.bashman.options]]
long = "--ie"
label = "<VER>"
description = "Minimum supported version of IE. If you want any IE support at all, this *must* be set."
path = false

[[package.metadata.bashman.options]]
long = "--ios"
label = "<VER>"
description = "Minimum supported version of iOS (Safari)."
path = false

[[package.metadata.bashman.options]]
long = "--opera"
label = "<VER>"
description = "Minimum supported version of Opera."
path = false

[[package.metadata.bashman.options]]
long = "--safari"
label = "<VER>"
description = "Minimum supported version of Safari."
path = false

[[package.metadata.bashman.options]]
long = "--samsung"
label = "<VER>"
description = "Minimum supported version of Samsung's Android browser."
path = false

[dependencies]
argyle = "0.5.*"
fyi_msg = "0.9.*"
parcel_css = "1.0.0-alpha.18"
utc2k = "0.3.*"
write_atomic = "0.2.*"

[dependencies.grass]
version = "0.10.*"
default-features = false
features = [ "random" ]

[build-dependencies]
dactyl = "0.2.*"

[build-dependencies.serde]
version = "1.0.*"
features = [ "derive" ]

[build-dependencies.serde_json]
version = "1.0.*"

[build-dependencies.ureq]
version = "2.4.*"
default-features = false
features = [ "tls", "gzip" ]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
