[package]
name = "guff_css"
version = "0.7.3"
license = "WTFPL"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2024"
rust-version = "1.85"
description = "A simple SASS/SCSS compiler and CSS parser/minifier."
repository = "https://github.com/Blobfolio/guff"
readme = "README.md"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"
targets = [ "x86_64-unknown-linux-gnu", "x86_64-apple-darwin" ]

[dependencies]
dactyl = "0.10.*"
oxford_join = "0.5.*"
trimothy = "0.7.*"

[dependencies.grass]
version = "=0.13.4"
default-features = false

[dependencies.lightningcss]
version = "=1.0.0-alpha.66"
default-features = false

[build-dependencies]
dactyl = "0.10.*"
oxford_join = "0.5.*"

[build-dependencies.minreq]
version = "2.13.*"
default-features = false
features = ["https"]

[build-dependencies.serde]
version = "1.0.*"
features = [ "derive" ]

[build-dependencies.serde_json]
version = "1.0.*"

[features]
default = []

# Used by the CLI binary.
bin = []
